--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -399,7 +399,7 @@
       <th>{{ 'Web'|trans }}</th>
       <th>{{' Email'|trans }}</th>
     </tr>
-    <tr>
+    <tr><!-- COMMENT CREATED -->
       <td>{{ 'New comment notification'|trans }}</td>
       <td>
         <input type='checkbox' data-trigger='change' data-model='user' data-target='notif_new_comment' {{ App.Users.userData.notif_new_comment == '1' ? " checked='checked'" }} />
@@ -408,6 +408,28 @@
         <input type='checkbox' data-trigger='change' data-model='user' data-target='notif_new_comment_email' {{ App.Users.userData.notif_new_comment_email == '1' ? " checked='checked'" }}/>
       </td>
     </tr>
+
+    <tr><!-- USER CREATED -->
+      <td>{{ 'New user created'|trans }}</td>
+      <td>
+        <input type='checkbox' data-trigger='change' data-model='user' data-target='notif_user_created' {{ App.Users.userData.notif_user_created == '1' ? " checked='checked'" }} />
+      </td>
+      <td>
+        <input type='checkbox' data-trigger='change' data-model='user' data-target='notif_user_created_email' {{ App.Users.userData.notif_user_created_email == '1' ? " checked='checked'" }}/>
+      </td>
+    </tr>
+
+    <tr><!-- USER NEED VALIDATION -->
+      <td>{{ 'New user need validation'|trans }}</td>
+      <td>
+        <input type='checkbox' data-trigger='change' data-model='user' data-target='notif_user_need_validation' {{ App.Users.userData.notif_user_need_validation == '1' ? " checked='checked'" }} />
+      </td>
+      <td>
+        <input type='checkbox' data-trigger='change' data-model='user' data-target='notif_user_need_validation_email' {{ App.Users.userData.notif_user_need_validation_email == '1' ? " checked='checked'" }}/>
+      </td>
+    </tr>
+
+
   </table>
 </div>
 <!-- END PAGE -->
