--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -49,6 +49,11 @@
                     <a class='dropdown-item clickable' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
                       <i class='fas fa-sync-alt mr-1'></i>{{ 'Upload a new version of this file'|trans }}</a>
 
+                    <!-- More info -->
+                    <a class='dropdown-item clickable' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
+                      <i class='fas fa-info-circle mr-1'></i>{{ 'More information'|trans }}</a>
+
+                    <!-- DESTROY -->
                     <div class='dropdown-divider'></div>
                     <a class='dropdown-item hover-danger clickable' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
                       <i class='fas fa-trash-alt fa-fw mr-1' title='{{ 'Delete'|trans }}'></i>{{ 'Delete'|trans }}
@@ -163,6 +168,11 @@
             <i class='fas fa-{{ mode == 'edit' ? 'pencil-alt' : 'eye' }} mr-1'></i><p data-uploadid='{{ upload.id }}' data-name='{{ upload.real_name }}' data-link='{{ upload.long_name }}' data-action='json-load-file' class='d-inline'>{{ 'Load into JSON Editor'|trans }}</p>
           </div>
         {% endif %}
+
+        <div id='moreInfo_{{ upload.id }}' class='d-none'>
+          <i class='fas fa-info-circle mr-1'></i>{{ 'Storage:'|trans }} {% if upload.storage == '1' %} {{ 'Local filesystem'|trans }} {% endif %} {% if upload.storage == '2' %} S3 bucket {% endif %}<br>
+          {{ upload.hash_algorithm }}: {{ upload.hash }}
+        </div>
 
         </div>
 
