--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1080,7 +1080,7 @@ the form-control fails to do that so we do the border ourselves */
 }
 
 .clickable:hover,
-[data-action='toggle-next'] {
+[data-action] {
     cursor: pointer;
 }
 
