--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -463,6 +463,9 @@ MySQL database structure version: {{ App.Config.configArr.schema }}</p>
               <label for='saml_privatekey'>x509 Certificate private key</label>
               <textarea class='form-control col-md-6' id='saml_privatekey' name='saml_privatekey'>{{ App.Config.configArr.saml_privatekey }}</textarea>
 
+              <label for='x509_new'>Rollover x509 Certificate in PEM format (only published in metadata, not used)</label>
+              <textarea class='form-control col-md-6' id='x509_new' name='saml_x509_new'>{{ App.Config.configArr.saml_x509_new }}</textarea>
+
               <label for='saml-team-create'>Create team sent by IDP if it doesn't exist already:</label>
               <select class='form-control col-md-6' id='saml-team-create' name='saml_team_create'>
                   <option value='1'{{ App.Config.configArr.saml_team_create == '1' ? ' selected' }}>Yes</option>
@@ -607,8 +610,13 @@ MySQL database structure version: {{ App.Config.configArr.schema }}</p>
                         <option value='urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect' {{ idp.slo_binding == 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect' ? 'selected' }}>Redirect</option>
                         <option value='urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST' {{ idp.slo_binding == 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST' ? 'selected' }}>POST</option>
                       </select>
+
                       <label for='x509_{{ idp.id }}'>x509cert:</label>
                       <textarea class='form-control col-md-6' name='x509' id='x509_{{ idp.id }}'>{{ idp.x509 }}</textarea>
+
+                      <label for='x509_new_{{ idp.id }}'>x509cert (additional for rollover):</label>
+                      <textarea class='form-control col-md-6' name='x509_new' id='x509_new_{{ idp.id }}'>{{ idp.x509_new }}</textarea>
+
                       <label for='saml-email_{{ idp.id }}'>What attribute to look for the email:</label>
                       <input class='form-control col-md-6' type='text' id='saml-email_{{ idp.id }}' name='email_attr' value='{{ idp.email_attr }}' />
 
@@ -668,6 +676,9 @@ MySQL database structure version: {{ App.Config.configArr.schema }}</p>
 
                 <label for='x509_idp'>x509 Certificate</label>
                 <textarea class='form-control col-md-6' id='x509_idp' name='x509' required></textarea>
+
+                <label for='x509_new_idp'>x509 Certificate (additional for rollover):</label>
+                <textarea class='form-control col-md-6' id='x509_new_idp' name='x509_new' required></textarea>
 
                 <label for='newidp-email_attr'>What attribute to look for the email:</label>
                 <input class='form-control col-md-6' type='text' id='newidp-email_attr' name='email_attr' />
