fix scroll problem with dropdowns

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -171,7 +171,7 @@
     </div>
 
     <h4 data-action='toggle-next' data-icon='extendedSearchIcon'><i id='extendedSearchIcon' class='fas fa-chevron-circle-right'></i> {{ 'Search helpers'|trans }}</h4>
-    <div hidden class='box mb-1' data-save-hidden='searchHelpersDiv'>
+    <div hidden class='box mb-1' data-save-hidden='searchHelpersDiv' style='overflow:visible;'>
       <div class='row'>
         <!-- AUTHOR/OWNER HELPER -->
         <div class='col-md-6 mb-md-3'>
